bigdata/trino/trino-src/core/trino-grammar/src/main/antlr4/io/trino/grammar/vaja/CalcBase.g4
/*
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

 grammar CalcBase;

 // 语法规则
 prog: expr+ ;

 expr: expr op=('*'|'/') expr   # MulDiv
     | expr op=('+'|'-') expr   # AddSub
     | NUMBER                   # Num
     | '(' expr ')'             # Parens
     ;

 // 词法规则
 MUL : '*' ;
 DIV : '/' ;
 ADD : '+' ;
 SUB : '-' ;
 NUMBER : [0-9]+ ('.' [0-9]+)? ;
 WS : [ \t\r\n]+ -> skip ;
